Login + AddProjectActivity with name + color

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".InactiveActivity"></activity>
         <activity android:name=".OverviewActivity"></activity>
         <activity android:name=".AddProjectActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
