--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -21,16 +22,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:animated-vector-drawable:27.1.0'    // extra wegen outdated in appcompat
+    implementation 'com.android.support:customtabs:27.1.0'                  // extra wegen outdated in appcompat
+    implementation 'com.android.support:cardview-v7:27.1.0'                 // extra wegen outdated in appcompat
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    //implementation 'com.google.firebase:firebase-auth:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.support:design:27.1.0'
-    compile 'com.google.firebase:firebase-core:12.0.1'
-    compile 'com.google.firebase:firebase-database:12.0.1'
-    compile 'com.google.firebase:firebase-auth:12.0.1'
-    compile 'com.firebaseui:firebase-ui-auth:3.2.2'
+    //compile 'com.google.firebase:firebase-core:12.0.1'
+    //compile 'com.google.firebase:firebase-database:12.0.1'
+    //compile 'com.google.firebase:firebase-auth:12.0.1'
+    //compile 'com.firebaseui:firebase-ui-auth:3.2.2'
     compile('com.facebook.android:facebook-android-sdk:4.27.0')
     compile("com.twitter.sdk.android:twitter-core:3.0.0@aar") { transitive = true }
 
