--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".SplashActivity"
+                  android:theme="@style/Theme.NoPreviewWindow">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity android:name=".LoginActivity"></activity>
         <activity android:name=".InactiveActivity"></activity>
         <activity android:name=".OverviewActivity"></activity>
         <activity android:name=".AddProjectActivity"></activity>
