--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:design:27.1.0'
+    compile 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.0'
+    compile 'com.github.yukuku:ambilwarna:2.0.1'
     //compile 'com.google.firebase:firebase-core:12.0.1'
     //compile 'com.google.firebase:firebase-database:12.0.1'
     //compile 'com.google.firebase:firebase-auth:12.0.1'
