--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.buzzme">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,21 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity"
-                  android:theme="@style/Theme.NoPreviewWindow">
-
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.NoPreviewWindow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".InactiveActivity"></activity>
-        <activity android:name=".OverviewActivity"></activity>
-        <activity android:name=".AddProjectActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".InactiveActivity" />
+        <activity android:name=".OverviewActivity" />
+        <activity android:name=".AddProjectActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".EMailLoginActivity"></activity>
     </application>
 
 </manifest>
