--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         <activity android:name=".InactiveActivity" />
         <activity android:name=".OverviewActivity" />
         <activity android:name=".AddProjectActivity" />
-        <activity android:name=".MainActivity" />
         <activity android:name=".RegistrationActivity" />
+        <activity android:name=".ActiveActivity" />
         <activity android:name=".EMailLoginActivity"></activity>
     </application>
 
