--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".InactiveActivity" />
-        <activity android:name=".OverviewActivity" />
+        <activity android:name=".InactiveActivity"
+            android:parentActivityName=".ActiveActivity"/>
+        <activity android:name=".OverviewActivity"
+            android:parentActivityName=".ActiveActivity"/>
         <activity android:name=".AddProjectActivity" />
-        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".RegistrationActivity"
+            android:parentActivityName=".LoginActivity"/>
         <activity android:name=".ActiveActivity" />
     </application>
 
