--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,12 @@
         <activity android:name=".OverviewActivity" />
         <activity
             android:name=".AddProjectActivity"
-            android:label="Projekt hinzufügen"/>
+            android:label="@string/new_project"/>
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".ActiveActivity" />
         <activity
             android:name=".AddTimeActivity"
-            android:label="Zeit hinzufügen"/>
+            android:label="@string/change_time"/>
     </application>
 
 </manifest>
