--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,32 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/Theme.NoPreviewWindow">
+            android:theme="@style/Theme.NoPreviewWindow"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".InactiveActivity" />
-        <activity android:name=".OverviewActivity" />
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".InactiveActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".OverviewActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".AddProjectActivity"
-            android:label="@string/new_project"/>
-        <activity android:name=".RegistrationActivity" />
-        <activity android:name=".ActiveActivity" />
+            android:label="@string/new_project"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".RegistrationActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActiveActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".AddTimeActivity"
-            android:label="@string/change_time"/>
+            android:label="@string/change_time"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
