Implemented "Projekt löschen" in addTime activity; changed "Zeit hinzufügen" to "Bearbeiten"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".AddTimeActivity"
-            android:label="@string/change_time"
+            android:label="@string/change_project"
             android:screenOrientation="portrait" />
     </application>
 
