text of all buttons readable BNV: selected item better recognizable ActiveActivity: BuzzMe buttons are highlighted at timer start AddTime --> EditProject no toasts at activity start

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".ActiveActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".AddTimeActivity"
+            android:name=".EditProjectActivity"
             android:label="@string/change_project"
             android:screenOrientation="portrait" />
     </application>
